--- a/chatbot/chatbot_project/chatbot_app/static/css/chat.css
+++ b/chatbot/chatbot_project/chatbot_app/static/css/chat.css
@@ -15,7 +15,7 @@
     outline: none;
     font-size: 18px;
     border-radius: 10px 10px 0px 0px;
-    border: 3px solid white;
+    border: 1px solid black;
     border-bottom: none;
 }
 
@@ -89,6 +89,11 @@
 
 #userInput {
     width: 75%;
+}
+
+.chatbot-image {
+    width: 50%;
+    height: auto;
 }
 
 .input-box {
